crates/au-cli/tests/it/snapshots/it__scenarios__pinned-ref-inert.snap
---
source: crates/au-cli/tests/it/scenarios.rs
expression: rendered
---
{
  "diagnostics": [],
  "instances": {
    "aborted_at_load": false,
    "count": 2,
    "entries": [
      {
        "body_events": null,
        "claim": [
          "au.engine.repo::au-engine"
        ],
        "closure": [
          "au.engine.repo::au-engine"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "deps",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "au.engine.dep::au-engine[]"
              }
            ],
            "required": false,
            "shape": "au.engine.dep::au-engine[]"
          },
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "name",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "remote",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 22,
                        "line_col": {
                          "end": {
                            "col": 23,
                            "line": 1
                          },
                          "start": {
                            "col": 7,
                            "line": 1
                          }
                        },
                        "start": 6
                      },
                      "file": "<root>/scenarios/pinned-ref-inert/.arsumbris/repo.yaml"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "pinned-ref-inert"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "pinned-ref-inert"
                }
              }
            ],
            "field": "name"
          }
        ],
        "file": "<root>/scenarios/pinned-ref-inert/.arsumbris/repo.yaml",
        "section_presence": null
      },
      {
        "body_events": [],
        "claim": [
          "touched-log"
        ],
        "closure": [
          "touched-log"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "touched",
            "origins": [
              {
                "name": "touched-log",
                "origin_path": "<root>/scenarios/pinned-ref-inert/type/touched-log.type.yaml",
                "required": true,
                "shape": "file*@"
              }
            ],
            "required": true,
            "shape": "file*@"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 51,
                        "line_col": {
                          "end": {
                            "col": 30,
                            "line": 3
                          },
                          "start": {
                            "col": 10,
                            "line": 3
                          }
                        },
                        "start": 31
                      },
                      "file": "<root>/scenarios/pinned-ref-inert/a-log-entry.md"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "anchor": null,
                      "block_id": null,
                      "commit": "abc123",
                      "kind": "reference",
                      "target": "ghost"
                    }
                  }
                ],
                "value": {
                  "anchor": null,
                  "block_id": null,
                  "commit": "abc123",
                  "kind": "reference",
                  "target": "ghost"
                }
              }
            ],
            "field": "touched"
          }
        ],
        "file": "<root>/scenarios/pinned-ref-inert/a-log-entry.md",
        "section_presence": null
      }
    ]
  }
}
