crates/au-cli/tests/it/snapshots/it__scenarios__pinned-union-mixed.snap
---
source: crates/au-cli/tests/it/scenarios.rs
expression: rendered
---
{
  "diagnostics": [],
  "instances": {
    "aborted_at_load": false,
    "count": 3,
    "entries": [
      {
        "body_events": null,
        "claim": [
          "au.engine.repo::au-engine"
        ],
        "closure": [
          "au.engine.repo::au-engine"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "deps",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "au.engine.dep::au-engine[]"
              }
            ],
            "required": false,
            "shape": "au.engine.dep::au-engine[]"
          },
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "name",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "remote",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 24,
                        "line_col": {
                          "end": {
                            "col": 25,
                            "line": 1
                          },
                          "start": {
                            "col": 7,
                            "line": 1
                          }
                        },
                        "start": 6
                      },
                      "file": "<root>/scenarios/pinned-union-mixed/.arsumbris/repo.yaml"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "pinned-union-mixed"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "pinned-union-mixed"
                }
              }
            ],
            "field": "name"
          }
        ],
        "file": "<root>/scenarios/pinned-union-mixed/.arsumbris/repo.yaml",
        "section_presence": null
      },
      {
        "body_events": [],
        "claim": [
          "entry"
        ],
        "closure": [
          "entry"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "ref",
            "origins": [
              {
                "name": "entry",
                "origin_path": "<root>/scenarios/pinned-union-mixed/type/entry.type.yaml",
                "required": true,
                "shape": "<file* | file*@>"
              }
            ],
            "required": true,
            "shape": "<file* | file*@>"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 33,
                        "line_col": {
                          "end": {
                            "col": 18,
                            "line": 3
                          },
                          "start": {
                            "col": 6,
                            "line": 3
                          }
                        },
                        "start": 21
                      },
                      "file": "<root>/scenarios/pinned-union-mixed/live-entry.md"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "anchor": null,
                      "block_id": null,
                      "kind": "reference",
                      "target": "target"
                    }
                  }
                ],
                "value": {
                  "anchor": null,
                  "block_id": null,
                  "kind": "reference",
                  "target": "target"
                }
              }
            ],
            "field": "ref"
          }
        ],
        "file": "<root>/scenarios/pinned-union-mixed/live-entry.md",
        "section_presence": null
      },
      {
        "body_events": [],
        "claim": [
          "entry"
        ],
        "closure": [
          "entry"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "ref",
            "origins": [
              {
                "name": "entry",
                "origin_path": "<root>/scenarios/pinned-union-mixed/type/entry.type.yaml",
                "required": true,
                "shape": "<file* | file*@>"
              }
            ],
            "required": true,
            "shape": "<file* | file*@>"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 43,
                        "line_col": {
                          "end": {
                            "col": 28,
                            "line": 3
                          },
                          "start": {
                            "col": 6,
                            "line": 3
                          }
                        },
                        "start": 21
                      },
                      "file": "<root>/scenarios/pinned-union-mixed/pinned-entry.md"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "anchor": null,
                      "block_id": null,
                      "commit": "a1b2c3d",
                      "kind": "reference",
                      "target": "target"
                    }
                  }
                ],
                "value": {
                  "anchor": null,
                  "block_id": null,
                  "commit": "a1b2c3d",
                  "kind": "reference",
                  "target": "target"
                }
              }
            ],
            "field": "ref"
          }
        ],
        "file": "<root>/scenarios/pinned-union-mixed/pinned-entry.md",
        "section_presence": null
      }
    ]
  }
}
